--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Bienvenido a mi sitio web</h1>
+    <h1>Bienvenido a mi sitio web</h1> 
+    <h3> fases del Proyecto
+        <p> <a href="Fase2/index.html">Fase 2</a></p>
+    </h3>
     <h2> Proyecto de sitio web 2023 periodo 16-1</h2> 
     <hr>
     <h3> Nombre: Diana Marcela Cabrera Gil</h3>
