--- a/Fase2/index.html
+++ b/Fase2/index.html
@@ -37,14 +37,11 @@
     <section id="inicio">
         <h2>¿Que es CSS GRID?</h2>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-             Suscipit id necessitatibus sapiente voluptatem deleniti beatae
-            dolorum quod. Fugiat, pariatur ad. Nemo excepturi doloremque
-            laborum odio nihil id facere quis cum.
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Veritatis ea rerum blanditiis eum beatae fugit ab magni.
-             Labore molestias, eius fuga, autem atque quos explicabo
-              eveniet ipsam quis perspiciatis mollitia!
+            CSS Grid layout contiene funciones de diseño dirigidas a los desarrolladores 
+            de aplicaciones web. El CSS grid se puede utilizar para lograr muchos diseños diferentes.
+             También se destaca por permitir dividir una página en áreas o regiones principales, 
+             por definir la relación en términos de tamaño, posición y capas entre partes de un control 
+             construido a partir de primitivas HTML.
         </p>
 
         <img src="img/imagen2.jpg" alt=" descripción de la imágen">
