--- a/Fase2/index.html
+++ b/Fase2/index.html
@@ -44,7 +44,7 @@
              construido a partir de primitivas HTML.
         </p>
 
-        <img src="img/imagen2.jpg" alt=" descripción de la imágen">
+        <img src="img/css grid.PNG alt=" descripción de la imágen">
 
     </section>
 
