--- a/Fase2/index.html
+++ b/Fase2/index.html
@@ -51,20 +51,17 @@
     <!-- Esta es la seccion del tema seleccionado -->
     <hr>
     <section>
-        <h2> Fases del ciclo de vida de un proyecto TI</h2>
+        <h2> CSS Grid Layout</h2>
 
-        <h3>Ciclo de Vida de los Proyectos de TI</h3>
+        <h3>CSS Grid Layout</h3>
 
         <p>
-            El ciclo de vida del proyecto conceptualiza los períodos que enlazan el comienzo de un proyecto con su
-            clausura. Un ciclo de vida para un proyecto figura de fases secuenciales preparadas por tareas panificables.
-            La evolución de una fase a otra dentro del ciclo de vida de un proyecto ordinariamente involucra y, por lo
-            general, está determinada por alguna forma de transferencia técnica.
+            Al igual que las tablas, el grid layout permite a un autor alinear elementos en columnas y filas. 
+            Sin embargo, con CSS grid son posibles muchos más diseños y de forma más sencilla que con las 
+            tablas. Por ejemplo, los elementos secundarios de un contenedor de cuadrícula podrían posicionarse
+             para que se solapen y se superpongan, de forma similar a los elementos posicionados en CSS.
 
-            Corrientemente, los productos de una fase se revisan para verificar si están completos, si son exactos y se
-            aprueban antes de iniciar el trabajo de la siguiente fase. No obstante, no es inusual que una fase entable
-            su comienzo antes de la aquiescencia de los productos entregables de la fase previa, cuando los peligros
-            implicados se consideran admisibles. Reyes, V (2015).
+            
 
         </p>
 
@@ -96,11 +93,11 @@
     </section>
     <hr>
     <a name="Acercade"></a>
-    <section>
+    <section>S
         <h3> Acerca de </h3>
 
-        <h5> Nombre: Mario Avila </h5>
-        <h5>correo: mario.avila@unad.edu.co</h5>
+        <h5> Nombre: Diana Cabrera </h5>
+        <h5>correo: dmcabrerag@unadvirtual.edu.co</h5>
 
     </section>
 
