--- a/Fase2/index.html
+++ b/Fase2/index.html
@@ -102,11 +102,19 @@
     </section>
 
     <footer>
-        <p> Eta pagina fue desarrollada por fulano</p>
-        <p> Fecha actualización:</p>
-        <p> Otra información</p>
+        <p> Eta pagina fue desarrollada por Diana Cabrera</p>
+        <p> Fecha actualización:03 de abril de 2023</p>
+        <p> dianamarcelacabreragil@gmail.com</p>
     </footer>
-
+    <div class="wrapper">
+        <div class="one">One</div>
+        <div class="two">Two</div>
+        <div class="three">Three</div>
+        <div class="four">Four</div>
+        <div class="five">Five</div>
+        <div class="six">Six</div>
+      </div>
+      
 
 
 </body>
