--- a/Fase2/index.html
+++ b/Fase2/index.html
@@ -5,9 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fase 2</title> 
-        }
-
+    <title>Fase 2</title>
             text-align: center;
             max-width: 90%;
             margin: auto;
@@ -21,7 +19,8 @@
 </head>
 
 <body> 
-
+    <style> 
+        backgro
     <header>
         <h1> Aprendamos sobre CSS GRID </h1>
         <nav>
